[project]
name = "stock-knowledge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.12.6",
    "playwright>=1.59.0",
]

[project.scripts]
stock-knowledge = "stock_knowledge:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
